--- a/services.html
+++ b/services.html
@@ -224,8 +224,8 @@
             <div class="col-md-6">
               <div class="sec-details">
                 <div>
-                  <h4 class="pb-4">E-Notarization</h4>
-                  <p>
+                  <h4 class="pb-2">E-Notarization</h4>
+                  <p class="text-muted lead pb-4">
                     Coordinating and finalizing all kinds of notarial services
                     with Notary Public online. E-Notarization (or Electronic
                     Notarization) is the process of performing notarization
@@ -237,23 +237,12 @@
                   </p>
                 </div>
                 <div>
-                  <h4 class="pb-4">Apostille Attestation Services</h4>
-                  <p>
+                  <h4 class="pb-2">Apostille Attestation Services</h4>
+                  <p class="text-muted lead">
                     The purpose of the Apostille is to eliminate the need for
                     lengthy legalization processes when authenticating documents
                     for international use between countries that are part of the
                     Hague Apostille Convention.
-                  </p>
-                </div>
-                <div>
-                  <h4 class="pb-4">Verification</h4>
-                  <p>
-                    A certified true copy is a lawyer-issued document with a
-                    signature and stamp confirming it's an exact copy of the
-                    original. This attestation is often needed for passports,
-                    DEWA/utility bills, and employment letters by government
-                    authorities, embassies, banks, and other institutions
-                    worldwide.
                   </p>
                 </div>
               </div>
@@ -304,6 +293,32 @@
             <div class="col-md-2 text-center">
               <i class="fas fa-file fa-3x mb-2"></i>
               <h5>All Other Documents</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="verification py-5">
+        <div class="container">
+          <div class="row align-items-center">
+            <h2 class="sec-heading mb-2 ps-0">Verification</h2>
+            <div class="col-lg-6 col-md-12">
+              <p class="text-muted lead mb-4">
+                A certified true copy is a lawyer-issued document with a
+                signature and stamp confirming it's an exact copy of the
+                original. This attestation is often needed for passports,
+                DEWA/utility bills, and employment letters by government
+                authorities, embassies, banks, and other institutions worldwide.
+              </p>
+            </div>
+
+            <!-- الصورة -->
+            <div class="col-lg-6 col-md-12 text-center">
+              <img
+                src="img/dafza-products_services_02.png"
+                alt="img"
+                class="img-fluid"
+              />
             </div>
           </div>
         </div>
