--- a/services.html
+++ b/services.html
@@ -261,7 +261,7 @@
         </div>
       </div>
 
-      <div class="mofa">
+      <div class="mofa" id="mofa">
         <div class="container">
           <h2 class="sec-heading mb-5">MOFA Attestations</h2>
           <div class="row d-flex justify-content-between">
@@ -298,7 +298,7 @@
         </div>
       </div>
 
-      <div class="verification py-5">
+      <div class="verification py-5" id="verification">
         <div class="container">
           <div class="row align-items-center">
             <h2 class="sec-heading mb-2 ps-0">Verification</h2>
@@ -324,7 +324,7 @@
         </div>
       </div>
 
-      <div class="translation">
+      <div class="translation" id="translation">
         <div class="container">
           <h2 class="sec-heading mb-5">Translation & Interpretation</h2>
           <div class="row">
