--- a/services.html
+++ b/services.html
@@ -17,13 +17,13 @@
       <div
         class="services-img text-center d-flex justify-content-center align-items-center"
       >
-        <h1 class="services-text">BUSINESS SETUP SERVICES</h1>
+        <h1 class="services-text content-data">BUSINESS SETUP SERVICES</h1>
       </div>
-      <div class="container mt-4">
+      <div class="container first-sec">
         <div class="row">
           <!-- Sub-links -->
           <div class="col-md-3">
-            <div class="sub-links">
+            <div class="sub-links content-data">
               <ul>
                 <li>
                   <a href="#preparing" class="active"
@@ -41,9 +41,11 @@
           <!-- Details section -->
           <div class="col-md-9">
             <div class="details" id="preparing">
-              <h2 class="details-heading">POA Preparing & Drafting</h2>
-              <div class="row mt-5">
-                <div class="col-md-6 mb-3">
+              <h2 class="details-heading sec-heading content-data">
+                POA Preparing & Drafting
+              </h2>
+              <div class="row mt-5 box">
+                <div class="col-md-6 mb-3 content-data">
                   <div class="box d-flex align-items-start">
                     <div class="icon me-3">
                       <i class="fa-solid fa-file-alt custom-icon"></i>
@@ -69,7 +71,7 @@
                   </div>
                 </div>
 
-                <div class="col-md-6 mb-3">
+                <div class="col-md-6 mb-3 content-data">
                   <div class="box d-flex align-items-start">
                     <div class="icon me-3">
                       <i class="fa-solid fa-file-contract custom-icon"></i>
@@ -99,7 +101,7 @@
                   </div>
                 </div>
 
-                <div class="col-md-6 mb-3">
+                <div class="col-md-6 mb-3 content-data">
                   <div class="box d-flex align-items-start">
                     <div class="icon me-3">
                       <i class="fa-solid fa-pen-to-square custom-icon"></i>
@@ -132,7 +134,7 @@
                   </div>
                 </div>
 
-                <div class="col-md-6 mb-3">
+                <div class="col-md-6 mb-3 content-data">
                   <div class="box d-flex align-items-start">
                     <div class="icon me-3">
                       <i class="fa-solid fa-file-signature custom-icon"></i>
@@ -160,7 +162,7 @@
                   </div>
                 </div>
 
-                <div class="col-md-6 mb-3">
+                <div class="col-md-6 mb-3 content-data">
                   <div class="box d-flex align-items-start">
                     <div class="icon me-3">
                       <i class="fa-solid fa-pen custom-icon"></i>
@@ -178,7 +180,7 @@
                   </div>
                 </div>
 
-                <div class="col-md-6 mb-3">
+                <div class="col-md-6 mb-3 content-data">
                   <div class="box d-flex align-items-start">
                     <div class="icon me-3">
                       <i class="fa-solid fa-thumbs-up custom-icon"></i>
@@ -195,7 +197,7 @@
                   </div>
                 </div>
 
-                <div class="col-md-6 mb-3">
+                <div class="col-md-6 mb-3 content-data">
                   <div class="box d-flex align-items-start">
                     <div class="icon me-3">
                       <i class="fa-solid fa-book custom-icon"></i>
@@ -218,7 +220,7 @@
       </div>
 
       <div class="notarization" id="notarization">
-        <div class="container">
+        <div class="container content-data">
           <h2 class="mb-5 sec-heading">Notarization & Attestation</h2>
           <div class="row d-flex justify-content-between">
             <div class="col-md-6">
@@ -262,48 +264,52 @@
       </div>
 
       <div class="mofa" id="mofa">
-        <div class="container">
+        <div class="container content-data">
           <h2 class="sec-heading mb-5">MOFA Attestations</h2>
           <div class="row d-flex justify-content-between">
             <!-- Box 1: Educational Certificate -->
-            <div class="col-md-2 text-center">
-              <i class="fas fa-graduation-cap fa-3x mb-2"></i>
+            <div class="col-md-2 text-center box">
+              <i class="fas fa-graduation-cap fa-3x mb-2 icon"></i>
               <h5>Educational Certificate</h5>
             </div>
 
             <!-- Box 2: Marriage Certificate -->
-            <div class="col-md-2 text-center">
-              <i class="fas fa-ring fa-3x mb-2"></i>
+            <div class="col-md-2 text-center box">
+              <i class="fas fa-ring fa-3x mb-2 icon"></i>
               <h5>Marriage Certificate</h5>
             </div>
 
             <!-- Box 3: Birth Certificate -->
-            <div class="col-md-2 text-center">
-              <i class="fas fa-baby fa-3x mb-2"></i>
+            <div class="col-md-2 text-center box">
+              <i class="fas fa-baby fa-3x mb-2 icon"></i>
               <h5>Birth Certificate</h5>
             </div>
 
             <!-- Box 4: MOA & AOA -->
-            <div class="col-md-2 text-center">
-              <i class="fas fa-file-alt fa-3x mb-2"></i>
+            <div class="col-md-2 text-center box">
+              <i class="fas fa-file-alt fa-3x mb-2 icon"></i>
               <h5>MOA & AOA</h5>
             </div>
 
             <!-- Box 5: All Other Documents -->
-            <div class="col-md-2 text-center">
-              <i class="fas fa-file fa-3x mb-2"></i>
+            <div class="col-md-2 text-center box">
+              <i class="fas fa-file fa-3x mb-2 icon"></i>
               <h5>All Other Documents</h5>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="verification py-5" id="verification">
+      <div class="verification content-data py-5" id="verification">
         <div class="container">
           <div class="row align-items-center">
-            <h2 class="sec-heading mb-2 ps-0">Verification</h2>
-            <div class="col-lg-6 col-md-12">
-              <p class="text-muted lead mb-4">
+            <div class="col-12">
+              <h2 class="sec-heading mb-4 text-center text-lg-start">
+                Verification
+              </h2>
+            </div>
+            <div class="col-lg-6 col-md-12 mb-4 mb-lg-0">
+              <p class="text-muted lead">
                 A certified true copy is a lawyer-issued document with a
                 signature and stamp confirming it's an exact copy of the
                 original. This attestation is often needed for passports,
@@ -312,11 +318,10 @@
               </p>
             </div>
 
-            <!-- الصورة -->
             <div class="col-lg-6 col-md-12 text-center">
               <img
                 src="img/dafza-products_services_02.png"
-                alt="img"
+                alt="Verification"
                 class="img-fluid"
               />
             </div>
@@ -325,7 +330,7 @@
       </div>
 
       <div class="translation" id="translation">
-        <div class="container">
+        <div class="container content-data">
           <h2 class="sec-heading mb-5">Translation & Interpretation</h2>
           <div class="row">
             <!-- Box 1: Translation Services -->
@@ -355,8 +360,10 @@
       </div>
     </div>
 
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/all.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
